--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,8 @@
-// @import "base/imports"; 
+@import "base/imports"; 
 
-// @import "theme/imports";
+@import "theme/imports";
 
-// @import "components/imports";
+@import "components/imports";
  
 @import "styles-main";
 
-
-body {
-    background-color: black;
-}
