--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -1,11 +1,8 @@
 .slider{
 
     display: flex;
-    justify-content: space-between;
-    width: 200px;
-    margin: 0 auto;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    justify-content: center;
+    padding: 25px;
     position: relative;
   }
 
