--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -1,88 +1,60 @@
-.modus-menu {
-
-    width: 100%;
-    height: 50px;
+.modus-menu{
     background-color: #76c7c0;
   }
   
-.logo-nav {
-
+.section_nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+.modus-logo {
+  padding: 28px 0 ;
+ }
+
+  .modus-logo a {
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+    font-family: "Myriad Pro";
     
   }
-  
-.modus-logo {
+ 
 
-  font-size: 30px;
-  font-weight: 700;
-  color: #fff;
-
-  }
-  
 .logo2{
-
     font-size: 20px;
     text-transform: uppercase;
     font-weight: 400;
+    font-family: "Myriad Pro"
   }
   
 .nav {
-
     font-size: 13px;
     text-transform: uppercase;
+    font-family: "OpenSans";
 
   }
 
 .nav-link {
-
-    display: inline block;
-    position: relative;
-    vertical-align: top;
     margin: 0 5px;
     color: #fff;
     text-decoration: none;
-    transition: background-color 0.2s linear;
+    transition: 0.2s linear;
     padding: 5px 5px;
     border-radius: 7px;
   
   }
 
-.nav-link:first-of-type {
-
-    margin-left: 0;
-  }
-
-.nav-link:after {
-
-      padding: 5px 5px;
-      border-radius: 5px;
-      display: block;
-      width: 100%;
-      height: 3px;
-      position: absolute;
-      top: 100%;
-      left: 0%;
-      z-index: 1;
-      display: none;
-      background-color: #e2534b;
-  
-  }
-
 .nav-link:hover {
-
     background-color: #e8645a;
   }
-
-.nav-link:hover:after {
-
-    display:block ;
-  }
-
-svg {
-    
+  
+.nav svg{
     width: 16px;
     height: 16px;
-    color: #fff;
+    fill: #fff;
   }
+
+  
+  
