--- a/scss/components/_testemoials.scss
+++ b/scss/components/_testemoials.scss
@@ -1,29 +1,27 @@
 .testemoials {
-
   width: 100%;
   margin: 0 auto;
   background-color: #ececec;
   display: flex;
   justify-content: space-between;
     
-  }
+}
    
-.test_logo{
-
+.test_logo {
   text-align: center;
   padding: 50px 0; 
-  }
+}
    
 .test_logo h3 {
-
   color: #e1524b;
   font-size: 40px;
+  font-family: "open_sanssemibold";
   text-transform: uppercase;
-  }
+}
    
 .test_logo p {
-
+  font-family: "open_sansregular";
   color: #969696;
   font-size: 13px;
-  }
+}
    
